--- a/package.json
+++ b/package.json
@@ -1,43 +1,14 @@
 {
-  "name": "glint-web",
-  "version": "0.1.0",
-  "type": "module",
-  "private": true,
-  "dependencies": {
-    "@types/node": "^20.14.11",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.1",
-    "axios": "^1.7.2",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0",
-    "typescript": "^4.9.5",
-    "vite": "^5.3.4",
-    "vite-tsconfig-paths": "^4.3.2",
-    "web-vitals": "^4.2.2"
-  },
-  "scripts": {
-    "start": "vite",
-    "build": "vite build"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "overrides": {
-    "vite": {
-      "rollup": "npm:@rollup/wasm-node"
+    "devDependencies": {
+        "@types/react": "npm:@types/react@^19.2.0",
+        "@types/react-dom": "npm:@types/react-dom@^19.2.0"
+    },
+    "dependencies": {
+        "react": "npm:react@^19.2.0",
+        "axios": "npm:axios@^1.13.2",
+        "jwt-decode": "npm:jwt-decode@^4.0.0",
+        "react-dom": "npm:react-dom@^19.2.0",
+        "react-router-dom": "npm:react-router-dom@^7.9.6"
+        
     }
-  }
 }
