ci: set image tag to be pushed to `ghcr.io`

--- a/.github/workflows/oci_image.yaml
+++ b/.github/workflows/oci_image.yaml
@@ -28,5 +28,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: thatpix3l/glint-web:latest
+          tags: ghcr.io/thatpix3l/glint-web:latest
           file: Containerfile
