--- a/.github/workflows/oci_image.yaml
+++ b/.github/workflows/oci_image.yaml
@@ -20,7 +20,7 @@ jobs:
           registry: ghcr.io
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
-          
+      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
           
@@ -32,5 +32,5 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/thatpix3l/glint-web:latest
+          tags: ghcr.io/${{ github.repository }}:latest
           file: Containerfile
